--- a/src/components/gallery/gallery.less
+++ b/src/components/gallery/gallery.less
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'iconfont';
+  src: url('../../fonts/iconfont.eot');
+  src: url('../../fonts/iconfont.eot?#iefix') format('embedded-opentype'),
+  url('../../fonts/iconfont.woff') format('woff'),
+  url('../../fonts/iconfont.ttf') format('truetype'),
+  url('../../fonts/iconfont.svg#iconfont') format('svg');
+}
+.iconfont{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
 body{
   margin: 0;
   padding: 0;
@@ -22,15 +37,6 @@ h3{
   background: #dedede;
   overflow: hidden;
 }
-@keyframes spin{
-  0% {
-    transform: rotateY(0deg);
-  }
-  100%{
-    transform: rotateY(180deg);
-  }
-}
-
 .img-figure{
   position: absolute;
   width: 280px;
@@ -60,7 +66,7 @@ h3{
     margin: 5px 0 0 0;
   }
 }
-.img-figure.img-reverse{
+.img-figure.is-reverse{
     transform: translate(320px) rotateY(180deg);
 }
 .front, .back {
@@ -86,5 +92,31 @@ h3{
   text-align: center;
   z-index: 100;
   width: 100%;
+  .controller{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background: #999;
+    border-radius: 50%;
+    transform: scale(.5);
+    transition: transform .6s ease-in-out,background-color .3s ;
+    vertical-align: middle;
+    cursor: pointer;
+    &.is-center{
+      transform: scale(1);
+       &:after{
+        font-family: "iconfont";
+        content: "\e60f";
+        line-height: 30px;
+        color: #fff;
+        webkit-font-smoothing: antialiased;
+      }
+      &.is-reverse{
+        background-color: #555;
+        transform: rotateY(180deg);
+      }
+    }
+
+  }
 }
 
