--- a/src/components/gallery/gallery.less
+++ b/src/components/gallery/gallery.less
@@ -13,6 +13,9 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
+html{
+  height: 100%;
+}
 body{
   margin: 0;
   padding: 0;
@@ -24,16 +27,19 @@ h3{
   margin: 0;
   padding: 0;
 }
+#root{
+  height: 100%;
+}
 .stage{
   position: relative;
   width: 100%;
-  height: 900px;
+  height: 100%;
   background: #ccc;
 }
 .img-container{
+  position: relative;
   width: 100%;
   height: 100%;
-  position: relative;
   background: #dedede;
   overflow: hidden;
 }
